--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "rules": {
-  
     "react/react-in-jsx-scope": "off"
-   
-},
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -17,6 +15,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
